<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context="com.example.Delivery_Section.AddDeliverer">


    <TextView
        android:id="@+id/txt_addDeliverer1"
        android:layout_width="329dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"

        android:cursorVisible="true"
        android:text="@string/txt_addDeliverer1"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textCursorDrawable="@android:drawable/alert_light_frame"
        android:textSize="38sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_addDeliverer1" />

    <EditText
        android:id="@+id/add_namec"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="168dp"
        android:background="#EAF2F8"
        android:ems="10"
        android:hint="                     Name"
        android:inputType="textPersonName"
        android:text="@string/add_namec"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_phonec"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="224dp"
        android:background="#EAF2F8"
        android:ems="10"
        android:hint="           Phone Number"
        android:inputType="text"
        android:text="@string/add_phonec"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_id"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="284dp"
        android:background="#EAF2F8"
        android:ems="10"
        android:hint="                       id"
        android:inputType="text"
        android:text="@string/add_id"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_datec"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="344dp"
        android:background="#EAF2F8"
        android:ems="10"
        android:hint="            MM/DD/YYYY"
        android:inputType="date"
        android:text="@string/add_datec"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savec_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="460dp"
        android:background="#151B54 "
        android:onClick="addCreditor"
        android:shadowColor="#00706767"
        android:text="@string/savec_btn"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="SAVE DETAILS" />

    <Button
        android:id="@+id/clearc_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="279dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="528dp"
        android:background="#151B54 "
        android:onClick="clearAll"
        android:shadowColor="#00706767"
        android:text="@string/clearc_btn"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CLEAR ALL" />


</androidx.constraintlayout.widget.ConstraintLayout>