<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context="com.example.Delivery_Section.SearchDeliverer">

    <TextView
        android:id="@+id/txt_searchcreditor"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="48dp"

        android:cursorVisible="true"
        android:text="@string/txt_searchc"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textColorHint="@color/cardview_dark_background"
        android:textColorLink="@color/cardview_dark_background"
        android:textCursorDrawable="@android:drawable/alert_light_frame"
        android:textSize="38sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="SEARCH HERE" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/searchtxtc"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="169dp"
            android:background="#9595b7"
            android:ems="10"
            android:hint="          Enter Name"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            tools:text="@string/searchtxtc" />

        <ImageView
            android:id="@+id/searchc_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="169dp"
            android:background="#9595b7"
            android:onClick="searchCreditor"
            android:padding="10dp"
            android:src="@drawable/ic_search_black_24dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_phone"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="250dp"
            android:background="#EAF2F8"
            android:text="               PHONE NUMBER"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/search_id"
            android:layout_width="353dp"
            android:layout_height="41dp"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="#EAF2F8"
            android:text="                          ID"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/search_date"
            android:layout_width="351dp"
            android:layout_height="44dp"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="#EAF2F8"
            android:text="                         DATE"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/cardview_dark_background" />



    </LinearLayout>


    <Button
        android:id="@+id/btn_dlt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="432dp"
        android:background="#151B54"
        android:gravity="center"
        android:onClick="dltcreditor"
        android:text="@string/btn_dlt"
        android:textSize="24dp" />


    <Button
        android:id="@+id/btn_searchback"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="432dp"
        android:background="#151B54"
        android:gravity="center"
        android:onClick="backhome"
        android:text="@string/btn_searchback"
        android:textSize="24dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_call"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="490dp"
            android:gravity="center"
            android:src="@drawable/ic_phone"
            android:background="#151B54" />


    </LinearLayout>


</RelativeLayout>